<resources>
    <string name="app_name">navigation View</string>

    <!--    navigation Menu item string -->

    <string name="gallery">Gallery</string>
    <string name="slideshow">Slide Show</string>
    <string name="bottom_navigate">Bottom Nav File</string>
    <string name="rate">Rate</string>
    <string name="share">Share</string>
    <string name="privacy">Privacy</string>
    <string name="exit">Exit</string>

    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>

    <string name="MyName">Pratik Thoriya</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>